--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/styles/tmp
 
 # testing
 /coverage
@@ -12,6 +13,7 @@
 /build
 
 # misc
+.idea
 .DS_Store
 .env.local
 .env.development.local
